name: what-it-do
cabal-version: >= 1.24
build-type: Simple
version: 1.0.0


library
  default-language: Haskell2010
  build-depends: base
               , ghc
               , syb
               , containers
               , template-haskell
               , prettyprinter
               , ghc-paths
               -- For the instrumentation payload, for now:
               , mtl
               , text
  exposed-modules: WhatItDo
  other-modules: OurConstraint
  ghc-options: -Wall
